--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -64,3 +64,5 @@ watchdog==2.1.9
     # via mkdocs
 zipp==3.8.0
     # via importlib-metadata
+ mkdocs-bibtex==2.8.1
+    # to include bibtex citations
