--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ theme:
 plugins:
   - search
   - bibtex:
-      bib_file: 'docs\bib\MyLibrary.bib'
+      bib_file: 'MyLibrary.bib'
       bib_by_default: true
   - mkdocstrings:
       handlers:
