--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -52,6 +52,8 @@ pyparsing==3.0.9
     # via packaging
 python-dateutil==2.8.2
     # via ghp-import
+python-pandoc==2.2
+    # entered manually
 pyyaml==6.0
     # via
     #   mkdocs
