--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,8 @@ nav:
     - Main Page: 'index.md'
     - Cognitive-Affective Maps: 'Cognitive-Affective Maps.md'
     - Set up study: 'Set up study.md'
-    - Cognitive-Affective Map extended logic: 'Cognitive-Affective Map extended logic.md'
-    - CAM-App: 'CAM-App.md'
+    - Data Collection Tool: 'Data Collection Tool.md'
+    - Data Analysis Tool: 'Data Analysis Tool.md'
     - Support: 'Support.md'
     - Additional Resources: 'Additional Resources.md'
 theme:
